feat: current progress

--- a/nodes/fields/index/locales/de/klicktipp-field-index.json
+++ b/nodes/fields/index/locales/de/klicktipp-field-index.json
@@ -1,6 +1,6 @@
 {
   "klicktipp-field-index" : {
-    "name": "Feldindex",
+    "name": "Feld\u2013Index",
     "label": {
       "config": "KlickTipp Konfig",
       "name": "Name"
