--- a/nodes/subscription-processes/get/locales/de/klicktipp-subscription-process-get.json
+++ b/nodes/subscription-processes/get/locales/de/klicktipp-subscription-process-get.json
@@ -1,6 +1,6 @@
 {
   "klicktipp-subscription-process-get" : {
-    "name": "Opt-in-Prozess erhalten",
+    "name": "Opt\u2013in\u2013Prozess erhalten",
     "label": {
       "config": "KlickTipp Konfig",
       "name": "Name",
