--- a/nodes/fields/index/locales/de/klicktipp-field-index.json
+++ b/nodes/fields/index/locales/de/klicktipp-field-index.json
@@ -11,6 +11,14 @@
     "status": {
       "success": "Abgerufene Datenfelder",
       "failed": "Opt-in-Prozesse konnten nicht abgerufen werden"
+    },
+    "error": {
+      "invalid-input": "Ungültige Eingabe",
+      "missing-credentials": "Fehlende Berechtigungsnachweise",
+      "invalid-credentials": "Ungültige Anmeldedaten oder Sitzungs-ID fehlt",
+      "login-failed": "Login-Anfrage fehlgeschlagen",
+      "logout-failed": "Invalid credentials or session ID missing",
+      "request-failed": "Anfrage fehlgeschlagen"
     }
   }
 }
