--- a/nodes/subscribers/tag/locales/de/klicktipp-subscriber-tag.json
+++ b/nodes/subscribers/tag/locales/de/klicktipp-subscriber-tag.json
@@ -18,7 +18,12 @@
     "error": {
       "missing-email": "Fehlende E-Mail",
       "missing-tag": "Fehlende oder ungültige Tag-IDs",
-      "invalid-input": "Ungültige Eingabe"
+      "invalid-input": "Ungültige Eingabe",
+      "missing-credentials": "Fehlende Berechtigungsnachweise",
+      "invalid-credentials": "Ungültige Anmeldedaten oder Sitzungs-ID fehlt",
+      "login-failed": "Login-Anfrage fehlgeschlagen",
+      "logout-failed": "Invalid credentials or session ID missing",
+      "request-failed": "Anfrage fehlgeschlagen"
     }
   }
 }
