--- a/nodes/subscribers/update/locales/de/klicktipp-subscriber-update.json
+++ b/nodes/subscribers/update/locales/de/klicktipp-subscriber-update.json
@@ -22,7 +22,12 @@
     },
     "error": {
       "missing-subscriber-id": "Fehlende Abonnenten-ID",
-      "invalid-input": "Ungültige Eingabe"
+      "invalid-input": "Ungültige Eingabe",
+      "missing-credentials": "Fehlende Berechtigungsnachweise",
+      "invalid-credentials": "Ungültige Anmeldedaten oder Sitzungs-ID fehlt",
+      "login-failed": "Login-Anfrage fehlgeschlagen",
+      "logout-failed": "Invalid credentials or session ID missing",
+      "request-failed": "Anfrage fehlgeschlagen"
     }
   }
 }
