--- a/nodes/tags/delete/locales/en/klicktipp-tag-delete.json
+++ b/nodes/tags/delete/locales/en/klicktipp-tag-delete.json
@@ -15,7 +15,12 @@
     },
     "error": {
       "missing-tag": "Missing tag ID",
-      "invalid-input": "Invalid input"
+      "invalid-input": "Invalid input",
+      "missing-credentials": "Missing credentials",
+      "invalid-credentials": "Invalid credentials or session ID missing",
+      "login-failed": "Login request failed",
+      "logout-failed": "Invalid credentials or session ID missing",
+      "request-failed": "Request failed"
     }
   }
 }
