--- a/nodes/fields/get/locales/en/klicktipp-field-get.json
+++ b/nodes/fields/get/locales/en/klicktipp-field-get.json
@@ -16,7 +16,12 @@
     "error": {
       "missing-api-field": "The API field ID is required.",
       "missing-field-id": "No field ID could be extracted from the provided API field ID.",
-      "invalid-input": "Invalid input"
+      "invalid-input": "Invalid input",
+      "missing-credentials": "Missing credentials",
+      "invalid-credentials": "Invalid credentials or session ID missing",
+      "login-failed": "Login request failed",
+      "logout-failed": "Invalid credentials or session ID missing",
+      "request-failed": "Request failed"
     }
   }
 }
