--- a/nodes/subscribers/resend-autoresponder/locales/en/klicktipp-resend-autoresponder.json
+++ b/nodes/subscribers/resend-autoresponder/locales/en/klicktipp-resend-autoresponder.json
@@ -19,7 +19,12 @@
     "error": {
       "missing-email": "Missing email",
       "missing-autoresponder": "Missing autoresponder ID",
-      "invalid-input": "Invalid input"
+      "invalid-input": "Invalid input",
+      "missing-credentials": "Missing credentials",
+      "invalid-credentials": "Invalid credentials or session ID missing",
+      "login-failed": "Login request failed",
+      "logout-failed": "Invalid credentials or session ID missing",
+      "request-failed": "Request failed"
     }
   }
 }
