--- a/nodes/subscribers/subscribe/locales/en/klicktipp-subscriber-subscribe.json
+++ b/nodes/subscribers/subscribe/locales/en/klicktipp-subscriber-subscribe.json
@@ -22,7 +22,12 @@
     },
     "error": {
       "missing-email-or-phone": "Missing email or phone number",
-      "invalid-input": "Invalid input"
+      "invalid-input": "Invalid input",
+      "missing-credentials": "Missing credentials",
+      "invalid-credentials": "Invalid credentials or session ID missing",
+      "login-failed": "Login request failed",
+      "logout-failed": "Invalid credentials or session ID missing",
+      "request-failed": "Request failed"
     }
   }
 }
