--- a/nodes/subscription-processes/get-redirect/locales/en/klicktipp-subscription-process-get-redirect.json
+++ b/nodes/subscription-processes/get-redirect/locales/en/klicktipp-subscription-process-get-redirect.json
@@ -18,7 +18,12 @@
     "error": {
       "missing-list-id": "Missing Opt-in ID",
       "missing-email": "Missing email",
-      "invalid-input": "Invalid input"
+      "invalid-input": "Invalid input",
+      "missing-credentials": "Missing credentials",
+      "invalid-credentials": "Invalid credentials or session ID missing",
+      "login-failed": "Login request failed",
+      "logout-failed": "Invalid credentials or session ID missing",
+      "request-failed": "Request failed"
     }
   }
 }
