--- a/nodes/subscription-processes/index/locales/en/klicktipp-subscription-process-index.json
+++ b/nodes/subscription-processes/index/locales/en/klicktipp-subscription-process-index.json
@@ -11,6 +11,13 @@
     "status": {
       "success": "Fetched Opt-in processes",
       "failed": "Failed to fetch Opt-in processes"
+    },
+    "error": {
+      "missing-credentials": "Missing credentials",
+      "invalid-credentials": "Invalid credentials or session ID missing",
+      "login-failed": "Login request failed",
+      "logout-failed": "Invalid credentials or session ID missing",
+      "request-failed": "Request failed"
     }
   }
 }
