--- a/nodes/tags/index/locales/en/klicktipp-tag-index.json
+++ b/nodes/tags/index/locales/en/klicktipp-tag-index.json
@@ -11,6 +11,13 @@
     "status": {
       "success": "Fetched manual tags",
       "failed": "Failed to fetch manual tags"
+    },
+    "error": {
+      "missing-credentials": "Missing credentials",
+      "invalid-credentials": "Invalid credentials or session ID missing",
+      "login-failed": "Login request failed",
+      "logout-failed": "Invalid credentials or session ID missing",
+      "request-failed": "Request failed"
     }
   }
 }
