--- a/nodes/tags/update/locales/de/klicktipp-tag-update.json
+++ b/nodes/tags/update/locales/de/klicktipp-tag-update.json
@@ -21,7 +21,12 @@
       "nothing-to-update": "Nichts zu aktualisieren",
       "missing-tag": "Fehlende Tag-ID",
       "missing-name": "Fehlender Tag-Name",
-      "invalid-input": "Ungültige Eingabe"
+      "invalid-input": "Ungültige Eingabe",
+      "missing-credentials": "Fehlende Berechtigungsnachweise",
+      "invalid-credentials": "Ungültige Anmeldedaten oder Sitzungs-ID fehlt",
+      "login-failed": "Login-Anfrage fehlgeschlagen",
+      "logout-failed": "Invalid credentials or session ID missing",
+      "request-failed": "Anfrage fehlgeschlagen"
     }
   }
 }
