--- a/nodes/tags/update/locales/en/klicktipp-tag-update.json
+++ b/nodes/tags/update/locales/en/klicktipp-tag-update.json
@@ -21,7 +21,12 @@
       "nothing-to-update": "Nothing to update",
       "missing-tag": "Missing tag ID",
       "missing-name": "Missing tag name",
-      "invalid-input": "Invalid input"
+      "invalid-input": "Invalid input",
+      "missing-credentials": "Missing credentials",
+      "invalid-credentials": "Invalid credentials or session ID missing",
+      "login-failed": "Login request failed",
+      "logout-failed": "Invalid credentials or session ID missing",
+      "request-failed": "Request failed"
     }
   }
 }
