fix: enhanced code

--- a/nodes/subscribers/index/locales/de/klicktipp-subscriber-index.json
+++ b/nodes/subscribers/index/locales/de/klicktipp-subscriber-index.json
@@ -1,6 +1,6 @@
 {
   "klicktipp-subscriber-index" : {
-    "name": "Abonnenten-Index",
+    "name": "Abonnenten\u2013Index",
     "config": "KlickTipp Konfig",
     "label": {
       "name": "Name"
